--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
   <div class="container">
     <div class="pulsanti">
-      <a href="https://www.mediafire.com/file/9ldv5sz9c0eeavy/Browser.exe/file" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A-R</a>
+      <a href="https://download1075.mediafire.com/q5l4zcxr2adg4Y3-urQFtjzPacYS_J9Imy08CFDB0dojJ6_8otdHtiEW9DOJdrtaALtl3MSt9Pm9ASvcGyfLBQwsUwTMdESVfxFnci1N1yA3gx_UY_CXCsF-jSqXgl5OGeNUXThKfWrIRtVeXd2QxitCjLwOBAb-PN9fJVHGYPK50d4/9ldv5sz9c0eeavy/Browser.exe" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A-R</a>
       <button class="pulsante">TheBrowser , Is A Lightweight Browser Portable</button>
     </div>
   </div>
