--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <body>
   <div class="container">
     <div class="pulsanti">
-      <a href="https://download1531.mediafire.com/6dsmh6z10ebgs46KTbzgbThhbW5Eep9Smb-WxFoFLvGD0AHER5wxXTMMcCVpUuUvLmLMUUPLnLiS8qYszZLpHRV75htxGJsCfInGJUPjgq9iaChpGCMV0rGxOrMRMuLFFicbh1zRiF1wSERH0zAPjyt3XLMhYSnE3E9JfwtCymmPUzo/34x2noxujljfvjh/0.1A2.zip" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A</a>
-      <button class="pulsante">TheBrowser , Is A Lightweight Browser Portable</button>
+      <a href="https://download1583.mediafire.com/6mhdrjfizu8gOfT9CiAT0U_4DaCLec9v-g7Je6gJfCguwtY3-vDkaA8dRsC0i7in65NhzaR2GINAPu9bXzWe6aglIndx3bPw6-XggMH93tXYPQM_-pz0_PXIWgpJzHyL80-Cb7J3ecy4h7T22ETEZwXmCqCS7bwi1p1oGQPQYdEMcLs/34x2noxujljfvjh/0.1A2.zip" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A</a>
+      <button class="pulsante">TheBrowser , Is A Lightweight Browser Free</button>
     </div>
   </div>
 </body>
