--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
   <div class="container">
     <div class="pulsanti">
-      <a href="https://download1583.mediafire.com/6mhdrjfizu8gOfT9CiAT0U_4DaCLec9v-g7Je6gJfCguwtY3-vDkaA8dRsC0i7in65NhzaR2GINAPu9bXzWe6aglIndx3bPw6-XggMH93tXYPQM_-pz0_PXIWgpJzHyL80-Cb7J3ecy4h7T22ETEZwXmCqCS7bwi1p1oGQPQYdEMcLs/34x2noxujljfvjh/0.1A2.zip" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A</a>
+      <a href="https://www.mediafire.com/file/6kk5q2pyzrjbsly/Browser2.zip/file" class="pulsante">Windows Vista, 7, 8x, 10 & 11ㅤㅤ0.2A2</a>
       <button class="pulsante">TheBrowser , Is A Lightweight Browser Free</button>
     </div>
   </div>
