--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <div class="testo-alto">
     <h1>Browser , Is A Lightweight Browser Free</h1>
 	<h2>Version : 0.2A2</h2>
-	<a href="https://github.com/HubDroider/Browser.github.io"<h3>Browser Site Github Page</h3></a>
-	<h4>In The Future It May Become OpenSource</h4>
+	<a href="https://github.com/HubDroider/Browser.github.io"<h3>Browser Site Github Page - </h3></a>
+	<a href="https://github.com/HubDroider/BOSP-BrowserOpenSourceProject/"<h4>BrowserOpenSourceProject</h4></a>
   </div>
 
   <div class="container">
